# tradergrader

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  HISTORICAL_DATA.md  LICENSE  NEXT_STEPS.md  README.md  README_MCP.md  ROADMAP.md  claude_code_mcp.md  docker-compose.yml  install.sh  install_mcp.sh  market_query.sh  test-binary.sh  test_mcp.json
scripts/: README.md  docker-build.sh  docker-run.sh  docker-test.sh  install.sh  mcp-wrapper.sh  test-esi.sh  test_from_claude_code.sh  test_interactive.sh  test_jita_detailed.sh  test_jita_orders.sh  test_mcp.py
src/: cache.rs  error.rs  lib.rs  main.rs  market.rs  mcp.rs  rate_limit.rs  server.rs  types.rs
tests/: cache_integration_test.rs  integration_test.rs  real_esi_integration_test.rs
